--- a/src/app/components/main-graph/main-graph.component.html
+++ b/src/app/components/main-graph/main-graph.component.html
@@ -1,6 +1,8 @@
 <h1>
   <span class="mr-5">{{'MAIN_GRAPH_TITLE' | translate}}</span>
-  <button class="btn btn-outline-success" (click)="fit()">{{'MAIN_GRAPH_BTN_FIT' | translate}}</button>
+  <button class="btn btn-outline-success" (click)="fit()"
+          data-toggle="tooltip" placement="bottom" ngbTooltip="{{'MAIN_GRAPH_TT_FIT' | translate}}"
+  >{{'MAIN_GRAPH_BTN_FIT' | translate}}</button>
 </h1>
 
 <hr>
