--- a/src/app/components/main-mappings/main-mappings.component.html
+++ b/src/app/components/main-mappings/main-mappings.component.html
@@ -11,97 +11,99 @@
 
   <hr>
 
-  <span *ngFor="let map of selectedMapping">
+  <div *ngIf="selectedMapping">
+    <span *ngFor="let map of selectedMapping">
 
-    <table *ngIf="map.chartValid" class="table table-bordered">
-      <thead>
-      <tr>
-        <th>{{map.title[1]}}</th>
-        <th>{{map.title[0]}}</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let entry of map.chart.lineChartData[0].data; let i = index">
-        <td *ngIf="i === 0">&lt;</td>
-        <td *ngIf="i === map.chart.lineChartLabels.length - 1">&gt;</td>
-        <td
-          *ngIf="i > 0 && i < map.chart.lineChartLabels.length - 1">{{map.chart.lineChartLabels[i]}}</td>
-        <td>{{entry}}</td>
-      </tr>
-      </tbody>
-    </table>
-
-    <table *ngIf="map.gradientValid" class="table table-bordered">
-      <thead>
-      <tr>
-        <th>{{map.title[1]}}</th>
-        <th>{{map.title[0]}}</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr *ngFor="let entry of map.colorGradient; let i = index">
-        <td *ngIf="i === 0">&lt;</td>
-        <td *ngIf="i === map.colorGradient.length - 1">&gt;</td>
-        <td *ngIf="i > 0 && i < map.colorGradient.length - 1">
-          {{entry.numericThreshold}}
-        </td>
-        <td>
-          {{entry.color}}
-          <span class="badge badge-pill border" [ngStyle]="{'background-color': entry.color}">&nbsp;</span>
-        </td>
-      </tr>
-      </tbody>
-    </table>
-
-    <div class="table-responsive">
-      <table *ngIf="map.classifier" class="table table-bordered">
+      <table *ngIf="map.chartValid" class="table table-bordered">
         <thead>
-        <th colspan="3">{{map.classifier}}</th>
-        <th *ngFor="let value of map.values">{{value}}</th>
+        <tr>
+          <th>{{map.title[1]}}</th>
+          <th>{{map.title[0]}}</th>
+        </tr>
         </thead>
         <tbody>
-        <tr *ngFor="let style of map.styleMap">
-
-          <td><b>{{style.cssKey}}</b></td>
-          <td>
-            <button type="button" class="btn btn-block btn-outline-warning" data-toggle="tooltip"
-                    data-placement="bottom" title="{{'MAIN_MAPPINGS_TT_EDIT' | translate}}">
-              <fa-icon [icon]="faEdit"></fa-icon>
-            </button>
-          </td>
-          <td>
-            <button type="button" class="btn btn-block btn-outline-danger">
-              <fa-icon [icon]="faTrash"></fa-icon>
-            </button>
-          </td>
-
-          <td *ngFor="let value of map.values; let i = index">
-
-              <span *ngFor="let styleValue of style.cssValues; let j = index">
-                <span *ngIf="map.selectors[i] === style.selectors[j]">
-                    {{styleValue}}
-                  <span *ngIf="styleValue.indexOf('#') > -1" class="badge badge-pill border"
-                        [ngStyle]="{'background-color': styleValue}">&nbsp;</span>
-                  </span>
-                </span>
-
-          </td>
-
+        <tr *ngFor="let entry of map.chart.lineChartData[0].data; let i = index">
+          <td *ngIf="i === 0">&lt;</td>
+          <td *ngIf="i === map.chart.lineChartLabels.length - 1">&gt;</td>
+          <td
+            *ngIf="i > 0 && i < map.chart.lineChartLabels.length - 1">{{map.chart.lineChartLabels[i]}}</td>
+          <td>{{entry}}</td>
         </tr>
         </tbody>
       </table>
-    </div>
 
-    <div class="mt-3 mb-3" *ngIf="map.classifier || map.chartValid || map.gradientValid">
-      <div>
-        <button class="btn btn-block btn-outline-danger" (click)="toggleRemoveDialogue(map, givenMapType)">
-          <fa-icon [icon]="faTrash"></fa-icon>
-          {{'MAIN_MAPPINGS_DELETE' | translate}}
-        </button>
+      <table *ngIf="map.gradientValid" class="table table-bordered">
+        <thead>
+        <tr>
+          <th>{{map.title[1]}}</th>
+          <th>{{map.title[0]}}</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr *ngFor="let entry of map.colorGradient; let i = index">
+          <td *ngIf="i === 0">&lt;</td>
+          <td *ngIf="i === map.colorGradient.length - 1">&gt;</td>
+          <td *ngIf="i > 0 && i < map.colorGradient.length - 1">
+            {{entry.numericThreshold}}
+          </td>
+          <td>
+            {{entry.color}}
+            <span class="badge badge-pill border" [ngStyle]="{'background-color': entry.color}">&nbsp;</span>
+          </td>
+        </tr>
+        </tbody>
+      </table>
+
+      <div class="table-responsive">
+        <table *ngIf="map.classifier" class="table table-bordered">
+          <thead>
+          <th colspan="3">{{map.classifier}}</th>
+          <th *ngFor="let value of map.values">{{value}}</th>
+          </thead>
+          <tbody>
+          <tr *ngFor="let style of map.styleMap">
+
+            <td><b>{{style.cssKey}}</b></td>
+            <td>
+              <button type="button" class="btn btn-block btn-outline-warning" data-toggle="tooltip"
+                      data-placement="bottom" title="{{'MAIN_MAPPINGS_TT_EDIT' | translate}}">
+                <fa-icon [icon]="faEdit"></fa-icon>
+              </button>
+            </td>
+            <td>
+              <button type="button" class="btn btn-block btn-outline-danger">
+                <fa-icon [icon]="faTrash"></fa-icon>
+              </button>
+            </td>
+
+            <td *ngFor="let value of map.values; let i = index">
+
+                <span *ngFor="let styleValue of style.cssValues; let j = index">
+                  <span *ngIf="map.selectors[i] === style.selectors[j]">
+                      {{styleValue}}
+                    <span *ngIf="styleValue && styleValue.toString().indexOf('#') > -1" class="badge badge-pill border"
+                          [ngStyle]="{'background-color': styleValue}">&nbsp;</span>
+                    </span>
+                  </span>
+
+            </td>
+
+          </tr>
+          </tbody>
+        </table>
       </div>
-    </div>
 
-  </span>
+      <div class="mt-3 mb-3" *ngIf="map.classifier || map.chartValid || map.gradientValid">
+        <div>
+          <button class="btn btn-block btn-outline-danger" (click)="toggleRemoveDialogue(map, givenMapType)">
+            <fa-icon [icon]="faTrash"></fa-icon>
+            {{'MAIN_MAPPINGS_DELETE' | translate}}
+          </button>
+        </div>
+      </div>
+
+    </span>
+  </div>
 
   <hr>
 
