--- a/src/app/components/sidebar-edit/sidebar-edit.component.html
+++ b/src/app/components/sidebar-edit/sidebar-edit.component.html
@@ -121,11 +121,11 @@
          aria-labelledby="editsNavAspects">
 
       <h5
-        *ngIf="selectedNetwork.mappings && (selectedNetwork.mappings.nodesDiscrete.length > 0 || selectedNetwork.mappings.nodesContinuous.length > 0)">
+        *ngIf="selectedNetwork.mappings && (selectedNetwork.mappings.nodesDiscrete || selectedNetwork.mappings.nodesContinuous) && (selectedNetwork.mappings.nodesDiscrete.length > 0 || selectedNetwork.mappings.nodesContinuous.length > 0)">
         {{'SIDEBAR_EDIT_ASPECTS_NODES' | translate}}
       </h5>
 
-      <table class="table table-bordered" *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.nodesDiscrete.length > 0">
+      <table class="table table-bordered" *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.nodesDiscrete && selectedNetwork.mappings.nodesDiscrete.length > 0">
         <tr *ngFor="let nodeMap of selectedNetwork.mappings.nodesDiscrete">
           <td>
             <a role="button" [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'nd' + selectedNetwork.mappings.nodesDiscrete.indexOf(nodeMap)]} }]">
@@ -150,7 +150,7 @@
                     <span *ngFor="let cssValue of style.cssValues; let k = index">
                       <span *ngIf="style.selectors[k] == nodeMap.selectors[i]">
                         {{cssValue}}
-                        <span *ngIf="cssValue.toString().indexOf('#') === 0"
+                        <span *ngIf="cssValue && cssValue.toString().indexOf('#') === 0"
                               class="badge badge-pill border"
                               [ngStyle]="{'background-color': cssValue}">&nbsp;
                         </span>
@@ -165,7 +165,7 @@
         </tr>
       </table>
 
-      <ul class="list-group" *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.nodesContinuous.length > 0">
+      <ul class="list-group" *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.nodesContinuous && selectedNetwork.mappings.nodesContinuous.length > 0">
       <span *ngFor="let nodeMap of selectedNetwork.mappings.nodesContinuous; let index = index">
         <li class="list-group-item" *ngIf="nodeMap.chartValid">
           <a role="button" (click)="displayMapping(nodeMap.chart, [], 'nc' + index)">
@@ -185,9 +185,9 @@
       </ul>
 
       <h5
-        *ngIf="selectedNetwork.mappings && (selectedNetwork.mappings.edgesDiscrete.length > 0 || selectedNetwork.mappings.edgesContinuous.length > 0)">{{'SIDEBAR_EDIT_ASPECTS_EDGES' | translate}}</h5>
+        *ngIf="selectedNetwork.mappings && (selectedNetwork.mappings.edgesDiscrete || selectedNetwork.mappings.edgesContinuous) && (selectedNetwork.mappings.edgesDiscrete.length > 0 || selectedNetwork.mappings.edgesContinuous.length > 0)">{{'SIDEBAR_EDIT_ASPECTS_EDGES' | translate}}</h5>
 
-      <table class="table table-bordered" *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.edgesDiscrete.length > 0">
+      <table class="table table-bordered" *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.edgesDiscrete && selectedNetwork.mappings.edgesDiscrete.length > 0">
         <tr *ngFor="let edgeMap of selectedNetwork.mappings.edgesDiscrete">
           <td>
             <a role="button" [routerLink]="['', { outlets: {primary: ['mappings', selectedNetwork.id, 'ed' + selectedNetwork.mappings.edgesDiscrete.indexOf(edgeMap)]} }]">
@@ -223,7 +223,7 @@
         </tr>
       </table>
 
-      <ul class="list-group" *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.edgesContinuous.length > 0">
+      <ul class="list-group" *ngIf="selectedNetwork.mappings && selectedNetwork.mappings.edgesContinuous && selectedNetwork.mappings.edgesContinuous.length > 0">
       <span *ngFor="let edgeMap of selectedNetwork.mappings.edgesContinuous; let index = index">
         <li class="list-group-item" *ngIf="edgeMap.chartValid">
           <a role="button" (click)="displayMapping(edgeMap.chart, [], 'ec' + index)">
@@ -265,7 +265,7 @@
         <div class="col">
             <span *ngFor="let css of s.style|keyvalue">
               <b>{{css.key}}</b>: {{css.value}}
-              <span *ngIf="css.value.toString().indexOf('#') === 0" class="badge badge-pill border"
+              <span *ngIf="css.value && css.value.toString().indexOf('#') === 0" class="badge badge-pill border"
                     [ngStyle]="{'background-color': css.value}">&nbsp;
               </span>
               <br>
