--- a/src/app/components/main-mappings/main-mappings.component.html
+++ b/src/app/components/main-mappings/main-mappings.component.html
@@ -14,7 +14,7 @@
   <div *ngIf="selectedMapping">
     <span *ngFor="let map of selectedMapping">
 
-      <table *ngIf="map.chartValid" class="table table-bordered">
+      <table *ngIf="map && map.chartValid" class="table table-bordered">
         <thead>
         <tr>
           <th>{{map.title[1]}}</th>
@@ -32,7 +32,7 @@
         </tbody>
       </table>
 
-      <table *ngIf="map.gradientValid" class="table table-bordered">
+      <table *ngIf="map && map.gradientValid" class="table table-bordered">
         <thead>
         <tr>
           <th>{{map.title[1]}}</th>
@@ -55,7 +55,7 @@
       </table>
 
       <div class="table-responsive">
-        <table *ngIf="map.classifier" class="table table-bordered">
+        <table *ngIf="map && map.classifier" class="table table-bordered">
           <thead>
           <th colspan="3">{{map.classifier}}</th>
           <th *ngFor="let value of map.values">{{value}}</th>
@@ -93,7 +93,7 @@
         </table>
       </div>
 
-      <div class="mt-3 mb-3" *ngIf="map.classifier || map.chartValid || map.gradientValid">
+      <div class="mt-3 mb-3" *ngIf="map && (map.classifier || map.chartValid || map.gradientValid)">
         <div>
           <button class="btn btn-block btn-outline-danger" (click)="toggleRemoveDialogue(map, givenMapType)">
             <fa-icon [icon]="faTrash"></fa-icon>
@@ -114,7 +114,7 @@
     <div class="row">
       <div class="col-6">
 
-        <table class="table table-borderless" *ngIf="selectedNetwork.aspectKeyValuesNodes.length > 0">
+        <table class="table table-borderless" *ngIf="selectedNetwork && selectedNetwork.aspectKeyValuesNodes.length > 0">
           <thead class="border-bottom">
           <th colspan="3">{{'MAIN_MAPPINGS_TITLE_NODES_DISCRETE' | translate}}</th>
           </thead>
@@ -174,7 +174,7 @@
 
       <div class="col-6">
 
-        <table class="table table-borderless" *ngIf="selectedNetwork.aspectKeyValuesEdges.length > 0">
+        <table class="table table-borderless" *ngIf="selectedNetwork && selectedNetwork.aspectKeyValuesEdges.length > 0">
           <thead class="border-bottom">
           <th colspan="3">{{'MAIN_MAPPINGS_TITLE_EDGES_DISCRETE' | translate}}</th>
           </thead>
@@ -235,7 +235,7 @@
     <div class="row">
       <div class="col-6">
 
-        <table class="table table-borderless" *ngIf="selectedNetwork.aspectKeyValuesNodes.length > 0">
+        <table class="table table-borderless" *ngIf="selectedNetwork && selectedNetwork.aspectKeyValuesNodes.length > 0">
           <thead class="border-bottom">
           <th colspan="3">{{'MAIN_MAPPINGS_TITLE_NODES_CONTINUOUS' | translate}}</th>
           </thead>
@@ -294,7 +294,7 @@
 
       <div class="col-6">
 
-        <table class="table table-borderless" *ngIf="selectedNetwork.aspectKeyValuesEdges.length > 0">
+        <table class="table table-borderless" *ngIf="selectedNetwork && selectedNetwork.aspectKeyValuesEdges.length > 0">
           <thead class="border-bottom">
           <th colspan="3">{{'MAIN_MAPPINGS_TITLE_EDGES_CONTINUOUS' | translate}}</th>
           </thead>
